# poco_module_didactic

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Vagrantfile
Provision/Puppet/librarian/: Puppetfile
Provision/Puppet/manifests/: default.pp
Provision/Puppet/modules/cmake/manifests/: install.pp
Provision/Puppet/modules/poco/files/mods-available/: poco_module.conf  poco_module.load
Provision/Puppet/modules/poco/manifests/: enable_apache_connector.pp  install.pp  install_apache_connector.pp
Provision/Puppet/modules/sample/manifests/: init.pp  install.pp
Provision/Puppet/modules/settings/manifests/: configure.pp  init.pp
SampleApacheConnector/: CMakeLists.txt
SampleApacheConnector/Application/: CMakeLists.txt
SampleApacheConnector/Application/include/Application/: Container.h  Exception.h  Router.h
SampleApacheConnector/Application/include/Application/Configuration/: WebCORSConfiguration.h
SampleApacheConnector/Application/include/Application/Handling/: ApplicationParser.h
SampleApacheConnector/Application/include/Application/Resource/: AbstractResource.h  Application.h  RouteNotFound.h
SampleApacheConnector/Application/include/Application/Resource/Factory/: ApplicationFactory.h  Factory.h  IFactory.h  RouteNotFoundFactory.h
SampleApacheConnector/Application/src/Application/: Container.cpp  Exception.cpp  Router.cpp
SampleApacheConnector/Application/src/Application/Handling/: ApplicationParser.cpp  ErrorParser.cpp
SampleApacheConnector/Application/src/Application/Resource/: AbstractResource.cpp  Application.cpp  RouteNotFound.cpp
SampleApacheConnector/Application/src/Application/Resource/Factory/: ApplicationFactory.cpp  Factory.cpp  RouteNotFoundFactory.cpp
SampleApacheConnector/Launcher/: CMakeLists.txt
SampleApacheConnector/Launcher/src/: main.cpp
data/settings/: poco.load
include/Application/: Container.h  Router.h
include/Application/Configuration/: CORSConfigurationInterface.h  ICORSConfiguration.h  JSONFileCORSConfiguration.h  WebCORSConfiguration.h
include/Application/Handling/: ApplicationJSONParser.h  ApplicationParser.h  ErrorJSONParser.h  ErrorParser.h
include/Application/Resource/: AbstractResource.h  Application.h  RouteNotFound.h
include/Application/Resource/Factory/: AbstractFactory.h  ApplicationFactory.h  FactoryInterface.h  RouteNotFoundFactory.h
scripts/: apache-setup-for-dockerfile.sh
src/: main.cpp
src/Application/: Container.cpp  Router.cpp
src/Application/Configuration/: JSONFileCORSConfiguration.cpp  WebCORSConfiguration.cpp
src/Application/Handling/: ApplicationJSONParser.cpp  ApplicationParser.cpp  ErrorJSONParser.cpp
src/Application/Resource/: AbstractResource.cpp  Application.cpp  RouteNotFound.cpp
src/Application/Resource/Factory/: AbstractFactory.cpp  ApplicationFactory.cpp  RouteNotFoundFactory.cpp
tests/: CMakeLists.txt
tests/Configuration/: CORSConfigurationJSONFileTest.cpp
tests/Resources/data/settings/: cors.json
