SET(MODULE_NAME "Application")
SET(MODULE_DIRECTORY "Application")

set(CMAKE_C_COMPILER /usr/bin/gcc)
set(CMAKE_CXX_COMPILER /usr/bin/g++)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

find_library(POCO_NET PocoNet)
find_library(POCO_UTIL PocoUtil)
find_library(POCO_FOUNDATION PocoFoundation)

find_package(Threads REQUIRED)

# including source code
set(PROJECT_SOURCE_DIR ${CMAKE_HOME_DIRECTORY}/${SAMPLE_DIRECTORY_NAME}/${MODULE_DIRECTORY}/src)
set(PROJECT_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/${SAMPLE_DIRECTORY_NAME}/${MODULE_DIRECTORY}/include)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${SAMPLE_DIRECTORY_NAME}/${MODULE_DIRECTORY}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${SAMPLE_DIRECTORY_NAME}/${MODULE_DIRECTORY}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_HOME_DIRECTORY}/${SAMPLE_DIRECTORY_NAME}/${MODULE_DIRECTORY}/bin)

file(GLOB APPLICATION_SOURCE_FILES_TOP "${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/*.cpp")
file(GLOB_RECURSE APPLICATION_SOURCE_FILES_NESTED
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Resource/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Handling/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Configuration/*.cpp
    ${PROJECT_SOURCE_DIR}/${MODULE_DIRECTORY}/Resource/Factory/*.cpp
)
set(APPLICATION_SOURCE_FILES ${APPLICATION_SOURCE_FILES_TOP} ${APPLICATION_SOURCE_FILES_NESTED})

include_directories("${PROJECT_INCLUDE_DIR}")
include_directories("${PROJECT_SOURCE_DIR}")
include_directories(${Poco_INCLUDE_DIRS})

add_library(${MODULE_NAME} SHARED ${APPLICATION_SOURCE_FILES})
target_link_libraries(${MODULE_NAME} ${POCO_FOUNDATION} ${POCO_UTIL} ${POCO_NET})
target_include_directories(${MODULE_NAME} PUBLIC ${PROJECT_INCLUDE_DIR})

# install application
install(TARGETS ${MODULE_NAME} DESTINATION ${APPLICATION_HOSTING_DIRECTORY})
